Catalyst8000v/gcp/cedge/c8000v.tf
resource "google_compute_instance" "cedge" {
  name         = var.name
  machine_type = var.instance_type
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = var.image_id
    }
  }

  network_interface {
    subnetwork = var.subnet_transport
    access_config {
    }
  }
  network_interface {
    subnetwork = var.subnet_service
  }

  metadata = {
    startup-script = file("cloud-init/ciscosdwan_cloud_init.cfg")
  }
}
